--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ DB_PASSWORD = TROLL_face2
 DB_DATABASE = plataforma_ipn
 DB_HOST = localhost
 DB_DIALECT = mysql
+
+AUTH_SECRET = cps_secret
+AUTH_EXPIRES = 24h
+AUTH_ROUNDS = 10
+
+
