--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
+    "pug-cli": "^1.0.0-alpha6",
     "sequelize": "^6.6.4",
     "timeago.js": "^4.0.2"
   },
