--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "npm-force-resolutions": "0.0.10",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pdf-creator-node": "^2.2.3",
     "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6",
     "sequelize": "^6.6.4",
@@ -31,5 +33,8 @@
   "devDependencies": {
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0"
+  },
+  "resolutions": {
+    "serialize-javascript": "3.1.0"
   }
 }
